# mingw-breakpad

./: CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
src/: config.h.in
src/client/linux/handler/: minidump_descriptor.h
src/client/windows/crash_generation/: client_info.cc  crash_generation_server.cc  minidump_generator.cc
src/client/windows/handler/: exception_handler.cc
src/common/android/testing/include/: wchar.h
src/common/dwarf/: dwarf2reader.cc  dwarf2reader.h
src/common/linux/: http_upload.cc  http_upload.h  libcurl_wrapper.cc
src/common/pecoff/: dump_symbols-inl.h
src/common/windows/: pdb_source_line_writer.cc
src/processor/: basic_source_line_resolver.cc  minidump.cc  minidump_unittest.cc
src/processor/testdata/: minidump2.dump.out
src/tools/windows/converter/: ms_symbol_server_converter.cc  ms_symbol_server_converter.h
src/tools/windows/dump_syms_dwarf/: dump_syms.cc
